--- a/LambdaJTUT/.classpath
+++ b/LambdaJTUT/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/LambdaJDEV/lib/guava-11.0.1.jar"/>
-	<classpathentry kind="lib" path="/LambdaJDEV/lib/lambdaj-2.3.3-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="lib/guava-11.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/lambdaj-2.3.3-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
